# my-playwright-app

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  test_ui.py
pages/: checkout_page.py  inventory_page.py  login_page.py  logout_page.py
src/enums/: data.py  urls.py
src/pages/: base_page.py  checkout_page.py  inventory_page.py  login_page.py  logout_page.py
tests/: conftest.py  test_ui.py
