[project]
name = "myplaywrightapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "allure-pytest>=2.15.0",
    "faker>=37.11.0",
    "pytest>=8.4.2",
    "pytest-playwright>=0.7.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = []
